<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Test APP</string>
    <string name="start">Start</string>
    <string name="nan">NaN</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="ip_address">IP Address</string>
    <string name="packet_data_goes_here">Packet Info (HTTP &amp; OBD)</string>
    <string name="misc_info">Misc Info</string>
    <string name="packet_info">Packet Info</string>
</resources>
